--- a/deploy/kubernetes/base/controller.yaml
+++ b/deploy/kubernetes/base/controller.yaml
@@ -5,7 +5,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: ebs-csi-controller
-  namespace: kube-system
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
 spec:
