--- a/deploy/kubernetes/base/serviceaccount-csi-controller.yaml
+++ b/deploy/kubernetes/base/serviceaccount-csi-controller.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ebs-csi-controller-sa
-  namespace: kube-system
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
   #Enable if EKS IAM for SA is used
